--- a/style.css
+++ b/style.css
@@ -6,14 +6,7 @@
 }
 
 body {
-    background-color: var(--rectangle-block-main);
-}
-
-:root {
-    --rectangle-block-orange: #F4E1DC;
-    --button-background-color: #E9724F;    
-    --button-background-color-hover: #DA403B;
-    --rectangle-block-main: #F6F4F5;
+    background-color: #F6F4F5;
 }
 
 .container {
@@ -24,10 +17,7 @@ body {
 header {
     border-bottom: 3px #E9724F solid;
     padding: 20px 0;
-    background-color: var(--rectangle-block-main);
-    /* display: block;
-    position: fixed;
-    width: 100%; */
+    background-color: #F6F4F5;
 }
 
 .promo {
@@ -60,6 +50,13 @@ header {
     margin-left: 20px;
 }
 
+.a__avt {
+    font-size: 17px;
+    color: #894334;
+    text-decoration: none;
+    margin-top: 15px;
+}
+
 .promo__slide {
     display: flex;
     flex-direction: row;
@@ -83,7 +80,7 @@ h1 {
 button {
     border-radius: 50px;
     border: none;
-    background-color: var(--button-background-color);
+    background-color: #E9724F;
     margin: 50px 0 0;
     padding: 15px;
     font-size: 25px;
@@ -91,17 +88,17 @@ button {
 }
 
 button:hover {
-    background-color: var(--button-background-color-hover)
+    background-color: #DA403B;
 }
 
-.about, .contacts {
-    background-color: var(--rectangle-block-orange);
+.about {
+    background-color: #F4E1DC;
     padding: 50px 0;
     border-radius: 75px;
     margin: 100px 0;
 }
 
-.questions, .reviews, .choice, .profil {
+.questions, .profil {
     margin: 100px 0;
 }
 
@@ -201,39 +198,14 @@ button:hover {
     display: none;
 }
 
-
-.reviews__block {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 40px;
-}
-
-.review {
-    background-color: #F4E1DC;
-    padding: 20px;
-    border-radius: 25px;
-} 
-
-.block__contacts {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-ul {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    color: #B18B78;
-    font-size: 26px;
-}
-
 footer {
     background-color: #E9724F;
-    padding: 50px 0;
+    padding: 15px 0;
+}
+
+.a_link_main {
+    color: #F6F4F5; 
+    text-decoration: none;
 }
 
 .a__footer {
@@ -244,22 +216,10 @@ footer {
     color: #F6F4F5;
 }
 
-.main__avt__reg {
-    height: 620px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-}
-
-.card__tab {
-    max-width: 700px;
-}
-
-input, select {
+input {
     border: solid 2px #E9724F;
     border-radius: 10px;
-    width: 100%;
+    /* width: 100%; */
     height: 50px;
     background: none;
     margin: 10px 0;
@@ -267,73 +227,33 @@ input, select {
     color: #E9724F;
     padding: 10px;
 }
-  
-select {
-    padding-left: 10px;
-    font-size: 20px;
-}
 
 input::placeholder {
     color: #E9724F;
     font-size: 20px;
     padding-left: 20px;
 }
-  
-.tab {
-    padding: 50px;
-    border: solid 2px #E9724F;
-    border-radius: 70px;
+
+li {
+    margin: 0 10px;
 }
 
-.tab>input[type="radio"] {
-    display: none;
-}
-  
-.tab-content {
-    display: none;
-    margin-top: 23px;
-}
-  
-#tab-reg:checked~#content-reg,
-#tab-avt:checked~#content-avt {
+form {
     display: flex;
     flex-direction: column;
-}
-  
-.tab>input[type="radio"]:checked+label {
-    color: #F6F4F5;
-    background-color: #E9724F;
-    padding: 10px;
-    border: none;
-    text-align: center;
-    font-size: 20px;
-    border-radius: 30px;
-} 
-
-label {
-    color: #E9724F;
-    font-size: 21px;
-}
-
-.btn__tab {
-    margin-top: 30px;
-    width: 100%;
-}
-
-div ul {
-    display: flex;
-    flex-direction: row;
-    padding-left: 0;
-    list-style-type: none;
-    justify-content: center;
-}
-
-div ul li {
-    display: flex;
     align-items: center;
-    cursor: pointer;
-    color: #171717;
-    gap: 10px;
+    max-width: 600px;
+}
+
+.h1__ar {
+    font-size: 40px;
+}
+
+.avt_log {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0;
 }
 
 .block-cover {
@@ -343,23 +263,6 @@ div ul li {
     justify-content: space-between;
     gap: 50px;
 }
-
-/* .block-cover::after {
-    content: " ";
-    clear: both;
-    display: block;
-} */
-
-.hide {
-    display: none;
-}
-
-.active {
-    background-color: #B18B78;
-    padding: 12px;
-    border-radius: 30px;
-}
-
 .for__margin {
     margin-bottom: 40px;
 }
@@ -393,52 +296,6 @@ div ul li {
 
 .book__about {
     font-size: 23px;
-}
-
-.ul__contact {
-    display: flex; 
-    flex-direction: column;
-    color: #B18B78;
-}
-
-.li__contact {
-    color: #B18B78;
-}
-
-.profil {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-}
-
-.circl {
-    width: 200px;
-    height: 200px;
-    background-color:#F2E8D3;
-    border-radius: 50%;
-}
-
-.input__profil {
-    width: 70%;
-}
-
-.profil__part1, .profil__part2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-}
-
-textarea {
-    width: 100%;
-    height: 20%;
-    border: solid 2px #E9724F;
-    color:#894334;
-    padding: 15px;
-    background-color:#F6F4F5;
-    border-radius: 20px;
-    font-size: 20px;
 }
 
 @media screen and (max-width: 1024px) {
