регистрация и окно с "вы вошли"

--- a/public/style.css
+++ b/public/style.css
@@ -98,7 +98,7 @@ button:hover {
     margin: 100px 0;
 }
 
-.questions, .profil {
+.questions {
     margin: 100px 0;
 }
 
@@ -133,12 +133,6 @@ button:hover {
     align-items: center;
     gap: 30px;
     max-width: 230px;
-}
-
-.block__about__text {
-  text-align: center;
-  font-size: 25px;
-  color: #171717;
 }
 
 .accordion__item {
@@ -238,13 +232,6 @@ li {
     margin: 0 10px;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 600px;
-}
-
 .h1__ar {
     font-size: 40px;
 }
@@ -253,7 +240,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 30px 0;
+    padding: 90px 0;
 }
 
 .block-cover {
@@ -289,7 +276,7 @@ form {
     font-size: 27px;
 }
 
-.book__author, .review__client {
+.book__loginor, .review__client {
     font-size: 19px;
     margin: 20px 0;
 }
@@ -436,12 +423,6 @@ form {
 
     .li__contact {
         font-size: 18px;
-    }
-
-    .profil {
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
     }
 
     .book__card {
